bugfix scrollbar in web viewer

--- a/app/css/library.css
+++ b/app/css/library.css
@@ -81,8 +81,9 @@ md-input-container .md-input[disabled] {
   -webkit-user-select: all;
 }
 #webViewer {
-  overflow-x: hidden;
-  overflow-y: scroll;
+  display: block;
+  /* iframes are inline by default */
+  border: none;
   height: 100%;
   width: 99%;
 }
